--- a/views/group.hbs
+++ b/views/group.hbs
@@ -9,21 +9,30 @@
                 <form>
 
                     <label class="control-label">Namn på grupp</label>
-                    <input type="text" class="form-control" placeholder="Testnamn" id="testName">
+                    <div id="missingTitle"  role="alert"></div>
+                    <div class="" id="inputError">
+                    <input type="text" class="form-control  has-warning" placeholder="Testnamn" id="testName" required>
+                    </div>
 
                     <div class="col-lg-6">
                         <label for="name" class="cols-sm-2 control-label">Elever</label>
+
                         <!-- Display list of students in the database. -->
                         <ul class="list-group" id="list" style="min-height:100px "></ul>
                     </div>
                     <div class="col-lg-6">
                         <label for="name" class="cols-sm-2 control-label">Tillagda elever</label>
+                        <div id="missingMembers"  role="alert"></div>
+
                         <!-- contains students of the group that the user creates-->
                     <ul class="list-group" id="groupList" style="min-height:100px ">
 
                     </ul>
                     </div>
+
                     <button id="createGroup" type="submit" class="btn btn-default" data-toggle="modal" data-target="#questionModal" >Skapa grupp</button>
+
+
                 </form>
             </div>
         </div>
