--- a/views/register.hbs
+++ b/views/register.hbs
@@ -52,7 +52,7 @@
             margin-top: 50px;
         }
 </style>
-//Script controls that the user enters all the values when registering new user.
+ <!-- Script controls that the user enters all the values when registering new user. -->
 <script>
     $("#registerButton").click(function (event) {
 
