--- a/views/share.hbs
+++ b/views/share.hbs
@@ -64,6 +64,7 @@
             }
         });
 
+        //Fills selectors with data from database
         $('#shareGroupSelect').append(`
             {{#studentGroups}}
                 <option>{{groupName}}</option>
