--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -6,10 +6,10 @@
               <div class="panel-heading">
                     <h1 class="panel-title">Statistik</h1>
               </div>
-              <div class="panel-body text-center">
+              <div class="panel-body">
 
                   <!-- Test selection -->
-                  <h4>Välj test för att se statistik</h4>
+                  <h4>Välj test för att se statistik</h4><br>
                   <form action="/test" method="get">
                       <select name="test" id="testSelect" class="form-control">
                           {{#each tests}}
