--- a/views/correcting.hbs
+++ b/views/correcting.hbs
@@ -2,34 +2,34 @@
     <div class="col-lg-10 col-lg-offset-1">
         <h1 class="title">Rätta test</h1>
         <hr/>
+
         <div class="panel panel-default">
             <div class="panel-heading clearfix">
                 <h3 class="panel-title">Fråga<span class="pull-right">Poäng: <input type="text"> / 10</span></h3>
             </div>
             <div class="panel-body collapse">
-                <ul class="list-group">
-                    <li class="list-group-item">1</li>
-                    <li class="list-group-item">2</li>
-                    <li class="list-group-item">3</li>
-                </ul>
-                <textarea class="form-control collapse" style="resize: vertical"></textarea>
-                <button type="button" class="btn btn-default commentButton">Kommentar på fråga</button>
+                <div class="col-md-6">
+                    <h4 class="title">Svar:</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">1</li>
+                        <li class="list-group-item">2</li>
+                        <li class="list-group-item">3</li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h4 class="title">Rätt svar:</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">1</li>
+
+                    </ul>
+                </div>
+                <div class="col-md-12">
+                    <textarea class="form-control collapse" style="resize: vertical"></textarea>
+                    <button type="button" class="btn btn-default commentButton">Kommentar på fråga</button>
+                </div>
             </div>
         </div>
-        <div class="panel panel-default">
-            <div class="panel-heading clearfix">
-                <h3 class="panel-title">Fråga<span class="pull-right">Poäng: <input type="text"> / 10</span></h3>
-            </div>
-            <div class="panel-body collapse">
-                <ul class="list-group">
-                    <li class="list-group-item">1</li>
-                    <li class="list-group-item">2</li>
-                    <li class="list-group-item">3</li>
-                </ul>
-                <textarea class="form-control collapse" style="resize: vertical"></textarea>
-                <button type="button" class="btn btn-default commentButton">Kommentar på fråga</button>
-            </div>
-        </div>
+
         <div class="panel panel-default">
             <div class="panel-heading clearfix">
                 <h3 class="panel-title">Kommentar för test</h3>
