--- a/views/register.hbs
+++ b/views/register.hbs
@@ -55,28 +55,25 @@
  <!-- Script controls that the user enters all the values when registering new user. -->
 <script>
     $("#registerButton").click(function (event) {
+        var mail = $('#email').val();
 
-<<<<<<< HEAD
+
+
         if ($('#firstname').val() == '') {
-
-=======
-        var fname = $('#firstname').val();
-        if (fname == '') {
             event.preventDefault();
->>>>>>> origin/master
             document.getElementById('controlFName').className = 'alert alert-danger';
             document.getElementById('controlFName').textContent = 'Ange förnamn';
             document.getElementById('errorFName').className = 'form-group  has-error';
         }
         else if ($('#lastname').val() =='') {
             event.preventDefault();
-
             document.getElementById('controlLName').className = 'alert alert-danger';
             document.getElementById('controlLName').textContent = 'Ange efternamn';
             document.getElementById('errorLName').className = 'form-group  has-error';
         }
-        else if ($('#email').val() =='') {
+        else if(!validateEmail (mail)){
             event.preventDefault();
+          console.log('plz work');
 
             document.getElementById('controlEmail').className = 'alert alert-danger';
             document.getElementById('controlEmail').textContent = 'Ange mejladress';
@@ -84,10 +81,14 @@
         }
         else if ($('#password').val() =='') {
             event.preventDefault();
-
             document.getElementById('controlPassword').className = 'alert alert-danger';
             document.getElementById('controlPassword').textContent = 'Ange lösenord';
             document.getElementById('errorPassword').className = 'form-group  has-error';
         }
+
     });
+    function validateEmail(mail) {
+        var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+        return re.test(mail);
+    }
 </script>
